crates/compiler/src/tests/e2e/bad/0030_generic_field_call/main.gom
struct Wrapper[T] {
    transform: (T) -> T,
}

fn main() {
    let w = Wrapper { transform: |x: int32| x * 2 };
    println(w.transform(21));
}
